--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
         body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
         #mi-mapa { height: 100vh; width: 100%; }
 
-        /* Contenedor del Logo */
+        /* LOGO TRANSPARENTE */
         .logo-container {
             position: absolute;
             top: 20px;
             right: 20px;
             z-index: 1000;
-            background: white;
-            padding: 10px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-            max-width: 180px;
+            background: none;    /* Sin fondo blanco */
+            max-width: 150px;
+            box-shadow: none;    /* Sin sombras */
+            border: none;
         }
 
         .logo-container img {
@@ -28,7 +27,6 @@
             display: block;
         }
 
-        /* Fichas de Inmuebles */
         .popup-ficha { width: 230px; text-align: center; }
         .popup-ficha img { width: 100%; border-radius: 8px; margin-bottom: 10px; }
         
@@ -40,9 +38,9 @@
 </head>
 <body>
 
-    <div class="logo-container">
-        <img src="logo.png" alt="Acropolis Realty" onerror="this.parentElement.innerHTML='<h3>Acropolis Realty</h3>'">
-    </div>
+    <div class="logo-container"> 
+        <img src="logo.png" alt="Acropolis Realty">
+    </div> 
 
     <div id="mi-mapa"></div>
 
