--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
         const locales = [
             { nombre: "Local Universidad (Cra 53)", coords: [10.9927, -74.7936], foto: "fotos/universidad.jpg" },
             { nombre: "Bodega Prado (Cra 54)", coords: [10.9968, -74.7961], foto: "fotos/bodega.jpg" },
-            { nombre: "Local Calle 30", coords: [10.9634, -74.8396], foto: "fotos/pueblito.jpg" }
+            { nombre: "Local Calle 30", coords: [10.9634, -74.8396], foto: "fotos/pueblito.jpg" },
+            { 
+                nombre: "trupillo", 
+                coords: [10.958857722011313, -74.78469889980501], 
+                foto: "fotos/trupillo.jpg" 
+            },
         ];
 
         locales.forEach(function(l) {
