Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -50,14 +50,26 @@
         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
         const locales = [
-            { nombre: "Local Universidad (Cra 53)", coords: [10.9927, -74.7936], foto: "fotos/universidad.jpg" },
-            { nombre: "Bodega Prado (Cra 54)", coords: [10.9968, -74.7961], foto: "fotos/bodega.jpg" },
-            { nombre: "Local Calle 30", coords: [10.9634, -74.8396], foto: "fotos/pueblito.jpg" },
+            { 
+                nombre: "Local Universidad (Cra 53)", 
+                coords: [10.9927, -74.7936], 
+                foto: "https://acropolisinmo-dot.github.io/mapa-acropolis/fotos/universidad.jpg" 
+            },
+            { 
+                nombre: "Bodega Prado (Cra 54)", 
+                coords: [10.9968, -74.7961], 
+                foto: "https://acropolisinmo-dot.github.io/mapa-acropolis/fotos/bodega.jpg" 
+            },
+            { 
+                nombre: "Local Calle 30", 
+                coords: [10.9634, -74.8396], 
+                foto: "https://acropolisinmo-dot.github.io/mapa-acropolis/fotos/pueblito.jpg" 
+            },
             { 
                 nombre: "trupillo", 
                 coords: [10.958857722011313, -74.78469889980501], 
-                foto: "fotos/trupillo.jpg" 
-            },
+                foto: "https://acropolisinmo-dot.github.io/mapa-acropolis/fotos/trupillo.jpg" 
+            }
         ];
 
         locales.forEach(function(l) {
@@ -72,3 +84,4 @@
     </script>
 </body>
 </html>
+
